second-step: main service